[package]
name = "blurmock"
version = "0.1.0"
authors = ["fokinv <fokin.valentin@stud.u-szeged.hu>", "Attila Dusnoki <adusnoki@inf.u-szeged.hu>"]
repository = "https://github.com/szeged/blurmock"
keywords = ["bluetooth", "blurmock", "ble", "fake", "mock", "test"]
license = "BSD-2-Clause"

[dependencies]
rustc-serialize = "0.3"
